--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,9 @@
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
 #my.datasource.url=local.db.com
 #my.datasource.username=username
 #my.datasource.password=password
